Sonarqube fixes including try-with-resources